--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: github pages blog
 ---
 
 <h2>{{ page.title }}</h2>
-<p>×îĞÂÎÄÕÂ</p>
+<p>test<p>
 <ul>
 	{% for post in site.posts %}
 		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
