--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-layout: default
+layout: post
 title: github pages blog
 ---
 
 <h2>{{ page.title }}</h2>
 <p>测试<p>
 <ul>
-	{% for post in site.posts %}
-		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-	{% endfor %}
+    {% for post in site.posts %}
+    <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
 </ul>
