--- a/_posts/2013-05-19-hello-github.html
+++ b/_posts/2013-05-19-hello-github.html
@@ -1,7 +1,5 @@
 ---
-layout: default
+layout: post
 title: hello github
 ---
-<h2>{{ page.title }}</h2>
-<p>hello github pages</p>
 <p>{{ page.date | date_to_string }}</p>
