增加文章测试

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 ---
-layout: post
-title: github pages blog
+layout: default
+title: Hwren's Blog
 ---
-
-<h2>{{ page.title }}</h2>
-<p>测试<p>
-<ul>
-    {% for post in site.posts %}
-    <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-</ul>
+{% for post in site.posts %}
+<div class="article span10 offset2">
+    <div class="art_inner">
+        <h2 class="art_title">
+            <a href="{{ post.url }}">{{ post.title }}</a>
+        </h2>
+        <div class="art_info">
+        </div>
+        <div class="art_summary">
+            {{ post.content | strip_html | truncatewords: 50}}
+        </div>
+        <div class="art_foot">
+        </div>
+    </div>
+</div>
+{% endfor %}
