--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Hwren's Blog
             <div class="art_info">
             </div>
             <div class="art_summary">
-                {{ post.content | strip_html | truncatewords: 50}}
+                {{ post.excerpt }}
             </div>
             <div class="art_foot">
             </div>
