--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Hwren's Blog
     <div class="article span10 offset2">
         <div class="art_inner">
             <h2 class="art_title">
-                <a href="{{ post.url }}">{{ post.title }}</a>
+                <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
             </h2>
             <div class="art_info">
                 {{ post.date | date_to_string}}
