--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Hwren's Blog
             <h2 class="art_title">
                 <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
             </h2>
+            <div class="sep"></div>
             <div class="art_info">
                 {{ post.date | date_to_string }}
             </div>
@@ -16,7 +17,12 @@ title: Hwren's Blog
                 {{ post.excerpt }}
                 <p><a href="{{ post.url }}">更多...</a></p>
             </div>
+            <div class="sep"></div>
             <div class="art_foot">
+                <span class="tag">tags:</span>
+                {% for tag in post.tags %}
+                <span><a href="">{{ tag }}</a></span>
+                {% endfor%}
             </div>
         </div>
     </div>
